filter_macros/tests/try/err/filter_unknown_key.rs
use filter_macros::Query;

#[derive(Query)]
#[filter(foo = "bar")]
pub struct T {
    pub name: String,
}
fn main() {}
